--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="forgot_password_info">Enter your email below to receive your  password reset instructions.</string>
     <string name="email">Email</string>
     <string name="reset_password">Reset Password</string>
+    <string name="get_started">Get started</string>
+    <string name="or">or</string>
+    <string name="login_underlined"><u>login</u></string>
+    <string name="login">Login</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="forgot_password_underlined"><u>forgot password</u></string>
 </resources>
