--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SportApp</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="onboarding_email_text">What\'s your email address?</string>
 </resources>
