--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="forgot_password_underlined"><u>forgot password</u></string>
+    <string name="exercise_instruction_mock">1. Lie back on a sturdy bench and grasp a bar with an overhand grip (slightly wider than shoulder width). Feet should be flat on the floor and back arched.\n2. Dismount the bar from the rack and lower the weight until it touches your middle chest.\n3. Press the bar upward until arms are fully extended (focus on using the chest muscles throughout the movement).\n4. Slowly lower bar back down to chest and repeat for desired repetitions.</string>
 </resources>
