Add schedule list xml and list item xml
Added xml for schedule list and list items.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="instruction">Instruction</string>
     <string name="reps">Reps</string>
     <string name="kilos">Kilos</string>
+    <string name="my_schedules">My Schedules</string>
+    <string name="minus_seperator">-</string>
 
 </resources>
