--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,19 @@
     <string name="instruction">Instruction</string>
     <string name="reps">Reps</string>
     <string name="kilos">Kilos</string>
+    <string name="title_activity_home">HomeActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="empty_text_no_exercises">There are currently no exercises.</string>
+    <string name="home">Home</string>
+    <string name="app_settings">App Settings</string>
+    <string name="account_settings">Account Settings</string>
+    <string name="statistics">Statistics</string>
+    <string name="workouts">Workouts</string>
+    <string name="schedules">Schedules</string>
+    <string name="settings">Settings</string>
 
 </resources>
