--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="onboarding_date_picker_title">Wat\'s your birthdate</string>
     <string name="onboarding_birthdate_text">What\'s your birthdate?</string>
     <string name="add_exercise">Add Exercise</string>
+    <string name="choose_workout">Choose workout</string>
 
 </resources>
