Please read description
- Added a local DB
- Local storage for exercise & workout
- Repositories for exercies & workout
- Fragments for exercisedetail & workout add/detail
- Fragment Arguments for passing ID’s
- Fixed workout url endpoint
- Added permissions for manifest
- Renamed some classes and variables and functions
- Added animations for activity switching
- Changed AlertDialogs to Snackbar
- Reformated code & Optimized imports
- Deleted Personal Schedule

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,9 @@
     <string name="workout_name">Workout name</string>
     <string name="chat">Chat</string>
     <string name="buddies">Buddies</string>
+    <string name="title_add_workout">Add Workout</string>
+    <string name="title_workout_details">Workout Details</string>
+    <string name="title_exercise_details">Exercise Details</string>
+    <string name="title_placeholder">Title</string>
+    <string name="category_placeholder">Category</string>
 </resources>
