--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SportApp</string>
+    <string name="app_name">Gainr</string>
     <string name="title_activity_register">RegisterActivity</string>
 
     <!--Onboarding Strings-->
@@ -16,7 +16,7 @@
 
     <!--Forgot Password Strings-->
     <string name="forgot_your_password">Forgot your password?</string>
-    <string name="forgot_password_info">Enter your email below to receive your  password reset instructions.</string>
+    <string name="forgot_password_info">Enter your email below to receive your password reset instructions.</string>
     <string name="forgot_password_underlined"><u>forgot password</u></string>
     <string name="email">Email</string>
     <string name="reset_password">Reset Password</string>
