Refactored exercise a bit and added some new stuff
- Favorites now work
- You can now Search the exercise list
- Images and GIFS can now be loaded in the image views
- Refactored the repositories and database schemes with the help of ANKO library

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="title_exercise_details">Exercise Details</string>
     <string name="title_placeholder">Title</string>
     <string name="category_placeholder">Category</string>
+    <string name="action_search">Search</string>
 </resources>
